--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
     "watch:sass": "node-sass sass/main.scss css/index.css -w",
-    "devserver": "live-server --browser=firefox",
+    "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
 
 
